# pdf-viewer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  wrangler.jsonc
docs/: Cargo.toml.md  Trunk.toml.md  index.html.md  wasm-explained.md
docs/src/: api.rs.md  app.rs.md  js_bindings.rs.md  main.rs.md  models.rs.md  theme.rs.md
docs/src/components/: mod.rs.md  note_editor.rs.md  notes_sidebar.rs.md  pdf_viewer.rs.md  sticky_note.rs.md  toolbar.rs.md
docs/styles/: main.css.md  notes.css.md  pdf.css.md  themes.css.md  toolbar.css.md
docs/worker/src/: db.ts.md  index.ts.md
docs/worker/src/routes/: notes.ts.md
js/: pdf_bridge.js
src/: api.rs  app.rs  js_bindings.rs  main.rs  models.rs  theme.rs
src/components/: mod.rs  note_editor.rs  notes_sidebar.rs  pdf_viewer.rs  sticky_note.rs  toolbar.rs
styles/: main.css  notes.css  pdf.css  themes.css  toolbar.css
worker/: package.json  schema.sql  wrangler.toml
worker/src/: db.ts  index.ts
worker/src/routes/: notes.ts
