[package]
name = "pdf-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "DomRect",
    "CssStyleDeclaration",
    "FileReader",
    "FileList",
    "File",
    "Blob",
    "Url",
    "ProgressEvent",
    "EventTarget",
    "HtmlSelectElement",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "js"] }
